--- a/src/html/_advanced-1.html
+++ b/src/html/_advanced-1.html
@@ -9,7 +9,7 @@
     <div class="advanced__content">
       <div class="nav__banner advanced__banner">
         <div class="nav__banner-texts">
-          <h3 class="nav__banner-title">
+          <h3 class="nav__banner-title nav__banner-title--little">
             Create and auto apply <br />
             custom strategies
           </h3>
