--- a/src/html/_filters-head-wallet-manager.html
+++ b/src/html/_filters-head-wallet-manager.html
@@ -10,7 +10,7 @@
         <ul class="filters-head__tokens-list">
           <li class="filters-head__tokens-item active">
             <div class="filters-head__token">
-              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
+              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/ethereum.svg" alt="binance">
               <p class="filters-head__token-text">Ethereum</p>
             </div>
           </li>
@@ -18,14 +18,14 @@
           <li class="filters-head__tokens-item">
             <div class="filters-head__token">
               <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
-              <p class="filters-head__token-text">Ethereum</p>
+              <p class="filters-head__token-text">Binance</p>
             </div>
           </li>
 
           <li class="filters-head__tokens-item">
             <div class="filters-head__token">
-              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
-              <p class="filters-head__token-text">Ethereum</p>
+              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/arbitrum.svg" alt="binance">
+              <p class="filters-head__token-text">Arbitrum</p>
             </div>
           </li>
         </ul>
