--- a/src/html/_main-table.html
+++ b/src/html/_main-table.html
@@ -1,5 +1,5 @@
 <div class="table-wrapper">
-  <table class="table">
+  <table class="table main-table">
     <thead>
       <tr>
         <th colspan="2">
@@ -62,7 +62,7 @@
         <th class="mobile-dn">
           <button type="button" class="table__filter">
             <p>Audit Report</p>
-            <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+            <!-- <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon"> -->
           </button>
         </th>
 
