--- a/src/html/_modals.html
+++ b/src/html/_modals.html
@@ -502,11 +502,11 @@
 
                     <label class="input-row__radio-label" for="sell-mev-1">
                       <div class="input-row__tokens">
-                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/binance.svg"
+                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/ethereum.svg"
                             alt="icon"></div>
                         <div class="input-row__token"><img width="20" height="20" src="./img/tokens/binance.svg"
                             alt="icon"></div>
-                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/binance.svg"
+                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/arbitrum.svg"
                             alt="icon"></div>
                       </div>
                       <span>EVM</span>
@@ -518,7 +518,7 @@
 
                     <label class="input-row__radio-label" for="sell-mev-2">
                       <div class="input-row__tokens">
-                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/binance.svg"
+                        <div class="input-row__token"><img width="20" height="20" src="./img/tokens/solana.svg"
                             alt="icon">
                         </div>
                       </div>
@@ -548,8 +548,6 @@
             </div>
           </div>
         </div>
-
-        <div class="modal__footer"></div>
       </div>
     </div>
   </div>
