--- a/src/html/_wallet-manager.html
+++ b/src/html/_wallet-manager.html
@@ -144,7 +144,8 @@
           <div class="wallet-actions__head">
             <div class="wallet-actions__row">
               <h4 class="wallet-actions__label">Main Wallet</h4>
-              <img width="16" height="16" src="./img/icons/wallet-icon.svg" alt="icon">
+              <img class="wallet-actions__icon--green" width="16" height="16" src="./img/icons/wallet-icon.svg"
+                alt="icon">
             </div>
             <div class="wallet-actions__row">
               <div class="wallet-actions__row">
