--- a/src/html/_filters-head-portfolio-analyzer.html
+++ b/src/html/_filters-head-portfolio-analyzer.html
@@ -1,5 +1,24 @@
 <div class="filters-head">
   <form action="#" class="filters-head__form filters-head__form--mb ">
+    <div class="filters-head__actions filters-head__row--full desktop-dn">
+
+      <div class="filters-head__balance">
+        <p class="filters-head__balance-sum">$ 6,250.00</p>
+        <p class="filters-head__balance-text">Balance</p>
+      </div>
+
+      <div class="filters-head__action">
+        <button type="button" class="filters-head__action-btn filters-head__action-btn--large active">
+          <img width="16" height="16" src="./img/icons/deposit-icon.svg" alt="icon">
+          <span>Deposit</span>
+        </button>
+      </div>
+
+      <!-- <div class="filters-head__action">
+        <button type="button" class="filters-head__action-btn filters-head__action-btn--large "><span>Wallet</span>
+          <img width="12" height="12" src="./img/icons/wallet-icon.svg" alt="icon"></button>
+      </div> -->
+    </div>
     <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Portfolio&nbsp;Analyzer</h1>
