--- a/src/html/_filters-head-pump-vision.html
+++ b/src/html/_filters-head-pump-vision.html
@@ -1,5 +1,25 @@
 <div class="filters-head">
-  <form action="#" class="filters-head__form filters-head__form--reverse">
+  <form action="#" class="filters-head__form filters-head__form--mb  filters-head__form--reverse">
+    <div class="filters-head__actions filters-head__row--full desktop-dn">
+
+      <div class="filters-head__balance">
+        <p class="filters-head__balance-sum">$ 6,250.00</p>
+        <p class="filters-head__balance-text">Balance</p>
+      </div>
+
+      <div class="filters-head__action">
+        <button type="button" class="filters-head__action-btn filters-head__action-btn--large active">
+          <img width="16" height="16" src="./img/icons/deposit-icon.svg" alt="icon">
+          <span>Deposit</span>
+        </button>
+      </div>
+
+      <!-- <div class="filters-head__action">
+        <button type="button" class="filters-head__action-btn filters-head__action-btn--large "><span>Wallet</span>
+          <img width="12" height="12" src="./img/icons/wallet-icon.svg" alt="icon"></button>
+      </div> -->
+    </div>
+
     <div class="filters-head__row">
       <div class="filters-head__icons desktop-dn">
         <!-- если добавить класс active то иконка покраситься -->
@@ -17,7 +37,7 @@
         </div>
 
         <div class="filters-head__action">
-          <button type="button" class="filters-head__action-btn active"><span>Advanced</span></button>
+          <button type="button" class="filters-head__action-btn"><span>Advanced</span></button>
         </div>
       </div>
     </div>
@@ -25,7 +45,7 @@
     <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Pump Vision</h1>
-        <img width="20" height="20" src="./img/icons/Pump Vision.svg" alt="icon">
+        <img class="mobile-dn" width="20" height="20" src="./img/icons/Pump Vision.svg" alt="icon">
       </div>
 
       <div class="filters-head__input-wrapper">
