--- a/src/html/_token-explorer.html
+++ b/src/html/_token-explorer.html
@@ -22,7 +22,7 @@
         <div class="tab__time">1m</div>
       </div>
 
-      <div class="filters-head__action">
+      <div class="filters-head__action mobile-dn">
         <button type="button" class="filters-head__action-btn"><span>Filters</span></button>
       </div>
     </div>
@@ -103,7 +103,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -141,7 +141,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -219,7 +220,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -257,7 +258,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -339,7 +341,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -377,7 +379,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -455,7 +458,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -493,7 +496,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -571,7 +575,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -609,7 +613,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -687,7 +692,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -725,7 +730,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -807,7 +813,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -845,7 +851,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -923,7 +930,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -961,7 +968,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1039,7 +1047,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1077,7 +1085,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1155,7 +1164,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1193,7 +1202,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1271,7 +1281,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1309,7 +1319,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1387,7 +1398,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1425,7 +1436,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1503,7 +1515,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1541,7 +1553,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1619,7 +1632,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1657,7 +1670,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1739,7 +1753,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1777,7 +1791,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1855,7 +1870,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -1893,7 +1908,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -1971,7 +1987,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2009,7 +2025,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2087,7 +2104,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2125,7 +2142,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2203,7 +2221,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2241,7 +2259,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2319,7 +2338,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2357,7 +2376,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2435,7 +2455,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2473,7 +2493,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2551,7 +2572,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2589,7 +2610,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2667,7 +2689,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num green-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2705,7 +2727,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
@@ -2783,7 +2806,7 @@
 
               <div class="tab__graphik">
                 <div class="tab__graphik-num red-text">
-                  <span class="tab__graphik-num-label">Percent</span>
+                  <span class="tab__graphik-num-label mobile-dn">Percent</span>
                   <div class="tab__graphik-num-row">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
                     <span>0.05336%</span>
@@ -2821,7 +2844,8 @@
               </div>
 
               <div class="tab__block">
-
+                <span>MC</span>
+                <p>$4K</p>
               </div>
             </div>
           </div>
