--- a/src/html/_aside.html
+++ b/src/html/_aside.html
@@ -65,7 +65,7 @@
                 <img src="./img/icons/nav-3.svg" width="20" height="20" alt="icon">
               </div>
 
-              <p class="nav__link-text">Pump Vision</p>
+              <p class="nav__link-text">FUN Pump</p>
 
               <img class="nav__link-arrow" src="./img/icons/nav-arrow.svg" alt="arrow icon">
             </a>
