--- a/src/html/_filters-head-terminal.html
+++ b/src/html/_filters-head-terminal.html
@@ -52,7 +52,7 @@
 
       <div class="filters-head__actions">
         <div class="filters-head__action">
-          <button type="button" class="filters-head__action-btn active"><span>Advanced</span></button>
+          <button type="button" class="filters-head__action-btn"><span>Advanced</span></button>
         </div>
       </div>
     </div>
