--- a/src/html/_main-table.html
+++ b/src/html/_main-table.html
@@ -130,7 +130,8 @@
           <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
-          <button type="button" class="outline-btn outline-btn--mini">Buy</button>
+          <button type="button" class="outline-btn outline-btn--changed outline-btn--mini"><span>$</span>
+            <span>1000</span></button>
         </td>
       </tr>
       <tr>
