--- a/src/html/_portfolio-analyzer.html
+++ b/src/html/_portfolio-analyzer.html
@@ -444,12 +444,22 @@
                       <p>Token</p>
                     </div>
                   </th>
+                  <th class="desktop-dn">
+                    <div class="table__head">
+                      <p>Amount</p>
+                    </div>
+                  </th>
+                  <th class="desktop-dn">
+                    <div class="table__head">
+                      <p>Liquidity</p>
+                    </div>
+                  </th>
                   <th>
                     <div class="table__head">
                       <p>PnL</p>
                     </div>
                   </th>
-                  <th>
+                  <th class="mobile-dn">
                     <div class="table__head">
                       <p>PnL (%)</p>
                     </div>
@@ -477,7 +487,17 @@
                       <p class="table__bold-text">$415.59</p>
                     </div>
                   </td>
-                  <td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$415.59</p>
+                    </div>
+                  </td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$12.04</p>
+                    </div>
+                  </td>
+                  <td class="mobile-dn">
                     <div class="table__column-direction">
                       <p class="table__bold-text">12</p>
                     </div>
@@ -504,13 +524,22 @@
                       <p class="table__bold-text">$415.59</p>
                     </div>
                   </td>
-                  <td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$415.59</p>
+                    </div>
+                  </td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$12.04</p>
+                    </div>
+                  </td>
+                  <td class="mobile-dn">
                     <div class="table__column-direction">
                       <p class="table__bold-text">12</p>
                     </div>
                   </td>
                 </tr>
-
 
                 <tr>
                   <td colspan="2">
@@ -532,13 +561,22 @@
                       <p class="table__bold-text">$415.59</p>
                     </div>
                   </td>
-                  <td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$415.59</p>
+                    </div>
+                  </td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$12.04</p>
+                    </div>
+                  </td>
+                  <td class="mobile-dn">
                     <div class="table__column-direction">
                       <p class="table__bold-text">12</p>
                     </div>
                   </td>
                 </tr>
-
 
                 <tr>
                   <td colspan="2">
@@ -560,7 +598,17 @@
                       <p class="table__bold-text">$415.59</p>
                     </div>
                   </td>
-                  <td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$415.59</p>
+                    </div>
+                  </td>
+                  <td class="desktop-dn">
+                    <div class="table__column-direction">
+                      <p class="table__bold-text">$12.04</p>
+                    </div>
+                  </td>
+                  <td class="mobile-dn">
                     <div class="table__column-direction">
                       <p class="table__bold-text">12</p>
                     </div>
