--- a/src/html/_pump-vision.html
+++ b/src/html/_pump-vision.html
@@ -5,21 +5,21 @@
         <button type="button" class="tab__btn active" data-tab-btn="New Creations">
           <span>New Creations</span>
           <div class="filters-head__action mobile-dn">
-            <div class="filters-head__action-btn"><span>Filters</span></div>
+            <div class="filters-head__action-btn filters-head__action-btn--mini"><span>Filters</span></div>
           </div>
         </button>
 
         <button type="button" class="tab__btn" data-tab-btn="About to Graduate">
           <span>About to Graduate</span>
           <div class="filters-head__action mobile-dn">
-            <div class="filters-head__action-btn"><span>Filters</span></div>
+            <div class="filters-head__action-btn filters-head__action-btn--mini"><span>Filters</span></div>
           </div>
         </button>
 
         <button type="button" class="tab__btn" data-tab-btn="Graduate">
           <span>Graduate</span>
           <div class="filters-head__action mobile-dn">
-            <div class="filters-head__action-btn"><span>Filters</span></div>
+            <div class="filters-head__action-btn filters-head__action-btn--mini"><span>Filters</span></div>
           </div>
         </button>
 
