--- a/src/html/_sniper.html
+++ b/src/html/_sniper.html
@@ -594,6 +594,12 @@
                     <p>Amt</p>
                   </div>
                 </th>
+
+                <th>
+                  <div class="table__head">
+                    <p>Token</p>
+                  </div>
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -621,6 +627,11 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -640,6 +651,11 @@
                 <td>
                   <div class="table__column-direction">
                     <p class="table__bold-text">$456.25</p>
+                  </div>
+                </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
                 <td>
@@ -673,6 +689,11 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -699,8 +720,12 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
-
 
               <tr>
                 <td colspan="2">
@@ -726,6 +751,11 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -745,6 +775,11 @@
                 <td>
                   <div class="table__column-direction">
                     <p class="table__bold-text">$456.25</p>
+                  </div>
+                </td>
+                <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
                 <td>
