--- a/src/html/_filters-head.html
+++ b/src/html/_filters-head.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="filters-head__action">
-          <button type="button" class="filters-head__action-btn active"><span>Advanced</span></button>
+          <button type="button" class="filters-head__action-btn"><span>Advanced</span></button>
         </div>
       </div>
     </div>
